make active yellow (cowduck color)

--- a/_sass/support/_variables.scss
+++ b/_sass/support/_variables.scss
@@ -58,8 +58,10 @@ $green-300: #00c08b;
 
 $yellow-000: #ffeb82 !default;
 $yellow-100: #fadf50 !default;
-$yellow-200: #f7d12e !default;
+//$yellow-200: #f7d12e !default;
 $yellow-300: #e7af06 !default;
+
+$yellow-200: #FFC720;
 
 $red-000: #f77e7e !default;
 $red-100: #f96e65 !default;
