update nav color

--- a/_sass/support/_variables.scss
+++ b/_sass/support/_variables.scss
@@ -79,6 +79,7 @@ $sidebar-text-color: $green-000;
 $body-heading-color: $grey-dk-300 !default;
 $search-result-preview-color: $grey-dk-000 !default;
 $nav-child-link-color: $white !default;
+$nav-grand-child-link-color: $blue-100 !default;
 $link-color: $green-300 !default;
 $btn-primary-color: $green-100 !default;
 $base-button-color: #f7f7f7 !default;
