--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -35,6 +35,33 @@
   }
 }
 
+.navigation-list-grand-child-list {
+  padding-left: $sp-3;
+  list-style: none;
+
+  .navigation-list-link {
+    color: $nav-grand-child-link-color;
+  }
+
+  .navigation-list-item {
+    position: relative;
+
+    &::before {
+      position: absolute;
+      margin-top: 0.3em;
+      margin-left: -0.8em;
+      color: rgba($nav-grand-child-link-color, 0.1);
+      content: ">  ";
+    }
+
+    &.active {
+      &::before {
+        color: $nav-grand-child-link-color;
+      }
+    }
+  }
+}
+
 .navigation-list-item {
   @include fs-4;
   margin: 0;
