--- a/_sass/tables.scss
+++ b/_sass/tables.scss
@@ -10,7 +10,8 @@
   margin-bottom: $sp-5;
   overflow-x: auto;
   border-radius: $border-radius;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 3px 10px rgba(0, 0, 0, 0.08);
+  border: 1px solid rgba(238,238,238,0.5);
+  /*box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 3px 10px rgba(0, 0, 0, 0.08);*/
 }
 
 table {
@@ -30,6 +31,7 @@ td {
   background-color: $table-background-color;
   border-bottom: $border rgba($border-color, 0.5);
   border-left: $border $border-color;
+  font-size: $small-font-size;
 
   &:first-of-type {
     border-left: 0;
