--- a/_sass/content.scss
+++ b/_sass/content.scss
@@ -251,6 +251,10 @@
   border-color: $depreciated-bg-border;
 }
 
+.status-comment {
+   color: $comment;
+}
+
 .section-separator {
     background-color: #3d7e9a;
     margin: 70px 0px 70px 0px;
