--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -127,3 +127,23 @@
 //lg: $content-width + $nav-width,
 //xl: 1400px
 //);
+
+
+//```js or code
+.highlighter-rouge{
+	padding: .75rem;
+    margin-bottom: .75rem;
+    overflow: auto;
+    border: 1px solid #eee;
+    border-radius: 4px;
+
+}
+
+//##
+h3{	
+	color: #00C08B !important;
+	font-size: 22px !important;
+}
+
+//language-js
+  
