--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,8 @@
     {% endif %}
   {% endif %}
 
+  <!-- <link rel="stylesheet" href="https://terminusdb.com/css/main.css"> -->
+
   <link rel="shortcut icon" href="{{ 'favicon.png' | absolute_url }}" type="image/x-icon">
 
   <link rel="stylesheet" href="{{ '/assets/css/just-the-docs.css' | absolute_url }}">
@@ -18,6 +20,8 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
+
+  
 
 
   {% if site.ga_tracking != nil %}
