--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,22 +38,22 @@ layout: table_wrappers
          <div class="menu__body">
             <ul class="menu__list">
                <li class="menu__item">
-                  <a href="https://terminusdb.com/docs/" target="_blank" class="menu__link menu__link--active" aria-label="Documentation">
+                  <a href="https://terminusdb.com/docs/"  target="_self" class="menu__link menu__link--active" aria-label="Documentation">
                   Documentation
                   </a>
                </li>
                <li class="menu__item">
-                  <a href="https://terminusdb.com/community/" target="_blank" class="menu__link " aria-label="Community">
+                  <a href="https://terminusdb.com/community/" target="_self" class="menu__link " aria-label="Community">
                   Community
                   </a>
                </li>
                <li class="menu__item">
-                  <a href="https://terminusdb.com/blog/" target="_blank" class="menu__link" aria-label="Blog">
+                  <a href="https://terminusdb.com/blog/" target="_self" class="menu__link" aria-label="Blog">
                   Blog
                   </a>
                </li>
                <li class="menu__item">
-                  <a href="/hub/" target="_self" class="menu__link" aria-label="Blog">
+                  <a href="https://terminusdb.com/hub/" target="_self" class="menu__link" aria-label="Blog">
                   Terminus Hub 
                   </a>
                </li>
@@ -72,7 +72,7 @@ layout: table_wrappers
                   </ul>
                </li>
                <li class="menu__item menu__item--full-devices">
-                  <a href="/hub/download" target="_blank" class="menu__button" aria-label="Download center">
+                  <a href="https://terminusdb.com/hub/download" target="_self" class="menu__button" aria-label="Download center">
                   Download Center
                   </a>
                </li>
