--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
     {% endif %}
   {% endif %}
 
-  <link rel="stylesheet" href="https://terminusdb.com/css/main.css">
+ <!-- <link rel="stylesheet" href="https://terminusdb.com/css/main.css"> -->
 
   <link rel="shortcut icon" href="{{ 'favicon.png' | absolute_url }}" type="image/x-icon">
 
