--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,7 +69,10 @@ layout: table_wrappers
                         <i class="icon-github-logo menu__icon"></i>
                         </a>
                      </li>
-                  </ul>
+                     <li class="menu__social-item"><a href="https://www.youtube.com/channel/UC5kZt8pP-FM0u-R0BQr78YA/featured" class="menu__social-link" target="_blank"><i class="icon-youtube menu__icon"></i></a></li>
+                       <li class="menu__social-item"><a href="https://www.linkedin.com/company/terminusdb/" class="menu__social-link" target="_blank"><i class="icon-linkedin menu__icon"></i></a>
+                    </li>
+                    </ul>
                </li>
                <li class="menu__item menu__item--full-devices">
                   <a href="https://terminusdb.com/hub/download" target="_self" class="menu__button" aria-label="Download center">
