--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -4391,3 +4391,9 @@ label.sub-description{
     	width: 100% !important; 
 	}
 }
+
+@media (max-width: 689px){
+    .menu__burger{
+       top: -15px;
+   }
+}
