--- a/_sass/support/_variables.scss
+++ b/_sass/support/_variables.scss
@@ -162,6 +162,19 @@ $navigation-list-item: 20px;
 $normal-font-size: 20px !default;
 $small-font-size: 18px !important;
 
+$gutter-spacing: $sp-6 !default;
+$gutter-spacing-sm: $sp-4 !default;
+$nav-width: 264px !default;
+$nav-width-md: 248px !default;
+$nav-list-item-height: $sp-6 !default;
+$nav-list-item-height-sm: $sp-8 !default;
+$nav-list-expander-right: true;
+$content-width: 800px !default;
+$header-height: 60px !default;
+$search-results-width: $content-width - $nav-width !default;
+$transition-duration: 400ms;
+$feedback-color: darken($sidebar-color, 3%) !default;
+
 //
 // Media queries in pixels
 //
