fix urls to new terminushub docs

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
 <nav role="navigation" aria-label="Main navigation">
   <ul class="navigation-list">
     <li class="navigation-list-item active">
-        <a href="https://terminusdb.com/documentation" class="navigation-list-link active">Home</a>
+        <a href="https://terminusdb.com/docs/" class="navigation-list-link active">Home</a>
     </li>
     {%- assign pages_list = site.html_pages | sort:"nav_order" -%}
     {%- for node in pages_list -%}
