--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,7 @@ layout: table_wrappers
          <div class="menu__body">
             <ul class="menu__list">
                <li class="menu__item">
-                  <a href="https://terminusdb.com/documentation/"  target="_self" class="menu__link menu__link--active" aria-label="Documentation">
+                  <a href="https://terminusdb.com/docs/"  target="_self" class="menu__link menu__link--active" aria-label="Documentation">
                   Documentation
                   </a>
                </li>
